syntax = "proto3";

package CarService.internal.app.car_service.endpoint;

import "google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "internal/app/car_service/endpoint";

service CarService {
  rpc AddUser(AddUserRequest) returns (AddUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateGarage(EmptyRequest) returns (CreateGarageResponse);
  rpc GetGarage(GetGarageRequest) returns (GetGarageResponse);
  rpc CarSearch(CarSearchRequest) returns (CarSearchResponse);
  rpc AddToGarage(AddToGarageRequest) returns (AddToGarageResponse);

}

message AddUserRequest {
  string username = 1 ;
}

message AddUserResponse {
  int64 id = 1;
}

message GetUserRequest {
  int64 id = 1 ;
}

message GetUserResponse {
  int64 id = 1;
  string username = 2;
  int64 garage_id = 3;
  google.protobuf.Timestamp updated_at = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message CreateGarageRequest {
  int64 id = 1;
}

message CreateGarageResponse {
  int64 id = 1;
}

message GetGarageRequest {
  int64 id = 1;
}

message GetGarageResponse {
  int64 garage_id = 1;
  repeated int64 cars = 2;
}

message Car {
  string id = 1;
  string brand = 2;
  string model = 3;
  string equipment = 4;
  string engine_type = 5;
}

message CarSearchRequest {
  string brand = 1;
  string model = 2;
}

message CarSearchResponse {
  repeated Car car = 1;
}

message AddToGarageRequest {
  int64 garage_id = 1;
  int64 model_id = 2;
}

message AddToGarageResponse {
  int64 car_id = 1;
}

message EmptyRequest {
}