syntax = "proto3";

package endpoint;

import "google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

service CarService {
  rpc AddUser(AddUserRequest) returns (AddUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CarSearch(CarSearchRequest) returns (CarSearchResponse);
  rpc AddCar(AddCarRequest) returns (AddCarResponse);
  rpc GetUserCars(GetUserCarsRequest) returns (GetUserCarsResponse);

}

message AddUserRequest {
  string username = 1 ;
}

message AddUserResponse {
  int64 id = 1;
}

message GetUserRequest {
  int64 id = 1 ;
}

message GetUserResponse {
  int64 id = 1;
  string username = 2;
  int64 garage_id = 3;
  google.protobuf.Timestamp updated_at = 4 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message Car {
  string id = 1;
  string brand = 2;
  string model = 3;
  string equipment = 4;
  string engine_type = 5;
}

message CarSearchRequest {
  string brand = 1;
  string model = 2;
}

message CarSearchResponse {
  repeated Car car = 1;
}

message AddCarRequest {
  int64 user_id = 1;
  string car_name = 2;
  int64 model_id = 3;
  int64 production_year = 4;
  int64 mileage = 5;
}

message AddCarResponse {
  int64 user_car_id = 1;
}

message UserCar {
  int64 id = 1;
  int64 model_id = 2;
  int64 production_year = 3;
  int64 mileage = 4;
  string car_name = 5;
  google.protobuf.Timestamp added_at = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message GetUserCarsRequest {
  int64 user_id = 1;
}

message GetUserCarsResponse {
  int64 user_id = 1;
  repeated UserCar user_cars = 2;
}